--- a/loginPage.html
+++ b/loginPage.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <script>
 function validate(){
 	var valid = false;
@@ -13,6 +14,9 @@ function validate(){
 			}
 		}
 	}
+	if(valid==false){
+		alert("Invalid username or password!");
+	}
 	return valid;
 	}
 </script>
@@ -20,16 +24,28 @@ function validate(){
 
 <html>
 	<head>
-		Morgantown University
+		<link rel = "stylesheet" href="bootstrap.css">
+		<title> Morgantown University</title>
 	</head>
 	<body>
 	<form  onsubmit = "return validate()" action = "mainpage.html">
-		<h1>Login</h1>
+		<table style = "width:100%">
+			<tr><td>
+				
+			<br><br><br><br>
+				
+			</td>
+			</tr>
+			<tr><td style = "background-color:white;">
+		<h1>Morgantown University</h1>
+		<h2>Login</h2>
 		<input type = "text" placeholder = "Enter username"  id = "username">
 		<br>
 		<input type = "password" placeholder = "Enter password" name = "password" id = "password">
 		<br>
 		<button type = "submit" >Login</button> 
+		</td></tr>
 	</form>
+	</table>
 	</body>
 </html>
