Full core of login/main page

--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
 		<link rel= "stylesheet" href="http://www.w3schools.com/lib/w3.css">
 	</head>
 	<body>
+		
 		<form onsubmit = "return validate()" action = "mainpage.html" method = "GET">
 		
 		<div><br><br>
@@ -40,7 +41,7 @@
 				<option value = "Admin">Administrator</option>
 			</select>
 			<br><br>
-			<button type = "submit";>Sign in</button>
+			<button type = "submit";>Sign In</button>
 		<br>
 			</div>
 		
