--- a/mainpage.html
+++ b/mainpage.html
@@ -54,12 +54,16 @@
 			<li id = "vote"><a href = "viewballot.html">Vote</a></li>
 			<li id = "create"><a href= "createballot.html">Create Ballot</a></li>
 			<li id = "modify"><a href = "modifyballot.html">Modify Ballot</a></li>
-			
+			<li id = "signout"><a href = "login.html">Sign out</a></li>
 			
 		</ul>
 		<h1 id = "accounttype">Account</h1>
 		<p id = "mainpagetext">
 			text
+		</p>
+		<br><hr>
+			<h1>News</h1>
+			<p>Here we will have some news from the school, PRT status, some things to do to avoid paying attention in class, etc.
 		</p>
 	</div>
 	</body>
