--- a/mainpage.html
+++ b/mainpage.html
@@ -10,9 +10,9 @@
 		if(x=="Student"){
 			var text = document.getElementById("mainpagetext").innerHTML;
 			var pos = text.replace("text", "Click on 'Vote' to participate and/or view current elections! Your vote matters!" );
-			var style = document.getElementById("create");
+			var style = document.getElementById("election");
 			style.style.visibility = "hidden";
-			var style2 = document.getElementById("modify");
+			var style2 = document.getElementById("view");
 			style2.style.visibility = "hidden";
 			document.getElementById("mainpagetext").innerHTML = pos;
 		}
@@ -51,9 +51,8 @@
 		<div style = "height:600px; width: 500px;">
 		<ul>
 			<li id = "home"><a href = "mainpage.html">Home</a></li>
-			<li id = "vote"><a href = "viewballot.html">Vote</a></li>
-			<li id = "create"><a href= "createballot.html">Create Ballot</a></li>
-			<li id = "modify"><a href = "modifyballot.html">Modify Ballot</a></li>
+			<li id = "news"><a href = "mainpage.html">News</a></li>
+			<li id = "prt"><a href = "mainpage.html">PRT Status</a></li>
 			<li id = "signout"><a href = "login.html">Sign out</a></li>
 			
 		</ul>
@@ -62,9 +61,19 @@
 			text
 		</p>
 		<br><hr>
-			<h1>News</h1>
-			<p>Here we will have some news from the school, PRT status, some things to do to avoid paying attention in class, etc.
-		</p>
+			<h1>Important Links</h1>
+			<ul style = "display:inline-block">
+				<li class = "userfunctions"; id = "vote"><a href = "vote.html">Vote Here !</a></li>
+			</ul>
+			
+			<ul style = "display:inline-block">
+				<li class = "userfunctions"; id = "election"><a href = "election.html">Election Management</a></li>
+			</ul>
+			
+			<ul style = "display:inline-block">
+				<li class = "userfunctions"; id = "view"><a href = "view.html">View Report</a></li>
+			</ul>
+			
 	</div>
 	</body>
 </html>
