--- a/view.html
+++ b/view.html
@@ -10,7 +10,7 @@
 <html>
 	<head>
 		<link rel = "stylesheet" href = "stylesheet.css">
-		<title>Election Management</title>
+		<title>View Results</title>
 	</head>
 	<body onload = "setupPage()">
 		<div style = "height:600px; width: 500px;">
