--- a/election.html
+++ b/election.html
@@ -1,27 +1,91 @@
 <script>
 	function setupPage(){
 		var x = document.cookie;
-		
+		/*Changes page if Head of Student Org. */
+		if(x=="Head of Student Org."){
+			var text = document.getElementById("mainpagetext").innerHTML;
+			var pos = text.replace("text", "(Insert what Head of Student Orgs can do here)" );
+			document.getElementById("mainpagetext").innerHTML = pos;
+			
+			style = document.getElementById("createballot");
+			style.parentNode.removeChild(style);		
+		}
+		/*Changes page if Election Commissioner account */
+		else if(x=="Election Comm"){
+			var text = document.getElementById("mainpagetext").innerHTML;
+			var pos = text.replace("text", "(Insert what Election Commissioner can do here)" );
+			document.getElementById("mainpagetext").innerHTML = pos;
+			
+			style = document.getElementById("assigncomm");
+			style.parentNode.removeChild(style);
+			
+			style2 = document.getElementById("caption");
+			style2.parentNode.removeChild(style2);
+		}
+		/*Changes page for Admin account */
+		else if(x=="Admin"){
+			var text = document.getElementById("mainpagetext").innerHTML;
+			var pos = text.replace("text", "(Insert what Admin can do here)" );
+			document.getElementById("mainpagetext").innerHTML = pos;
+		}
 	}
 	
 	
+	function openComm(){
+		var id = document.getElementById("createelection");
+		id.parentNode.removeChild(id);
+		
+		id = document.getElementById("eleccomminput");
+		id.style.display = "inline";
+		
+		id = document.getElementById("submitcomm");
+		id.style.display = "inline";
+		
+		
+	}
+	
+	function validate(){
+		var x = document.getElementById("eleccomminput").value;
+		var b = false;
+		if(x != ""){
+			b = true;
+		}else{
+			alert("No Election Commissioner entered");
+			b = false;
+		}
+		return b;
+	}
 </script>
 
 <html>
 	<head>
 		<link rel = "stylesheet" href = "stylesheet.css">
+		<link rel= "stylesheet" href="http://www.w3schools.com/lib/w3.css">
 		<title>Election Management</title>
 	</head>
 	<body onload = "setupPage()">
+		<form action = "createelection.php">
 		<div style = "height:600px; width: 500px;">
 		<ul>
 			<li id = "home"><a href = "mainpage.html">Home</a></li>
 			<li id = "news"><a href = "mainpage.html">News</a></li>
 			<li id = "prt"><a href = "mainpage.html">PRT Status</a></li>
 			<li id = "signout"><a href = "login.html">Sign out</a></li>
-			
 		</ul>
 		<h1>Welcome</h1>
+			<p id = "mainpagetext">
+				text
+				</p>
+			<p>Click here to create an election </p>
+			<button id = "createelection" onclick = "openComm()">Create</button>
+			<input type = "text" placeholder = "Enter Election Commissioner" style = "display:none" id = "eleccomminput"></input>
+			<button id = "submitcomm" type = "submit" style = "display:none" onclick = " return validate()">Submit</button>
+			<br><br>
+			<button  id = "createballot" onclick = "createballot.html">Create Ballot</button>
+			<br><br>
+			<button id = "modifyballot" onclick = "modifyballot.html">Modify Ballot</button>
+			<br><br>
 		</div>
+		</form>
 	</body>
 </html>
