--- a/mainpage.html
+++ b/mainpage.html
@@ -74,6 +74,8 @@
 			<ul style = "display:inline-block" id = "view">
 				<li class = "userfunctions"; id = "view"><a href = "view.html">View Report</a></li>
 			</ul>
+			<br>
+			<img src = "rmcd.png">
 			
 	</div>
 	</body>
